[package]
name = "swarm-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "swarm-local"
path = "src/main.rs"

[dependencies]
# The participant runtime + the local-coordinator shell + in-process peer harness (`harness`).
daemon-swarm-run = { workspace = true, features = ["harness"] }
# The frozen envelope schema + freeze/verify chain (§6.1).
daemon-swarm-proto = { workspace = true }
# The node-side worker supervisor for `--backend worker` (spawn/probe/assess/join over §10.2).
daemon-train-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
# Parse the authoring TOML envelope (proto stays wasm32-clean + never parses TOML — §6.1).
toml = { workspace = true }
serde = { workspace = true }
# `[experiment.config]` is carried as an opaque CBOR value in the frozen envelope.
ciborium = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
