[package]
name = "daemon-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
daemon-common = { workspace = true }
daemon-protocol = { workspace = true }
daemon-supervision = { workspace = true }
daemon-api = { workspace = true }
daemon-core = { workspace = true }
daemon-store = { workspace = true, features = ["sqlite"] }
daemon-activation = { workspace = true }
daemon-host = { workspace = true }
daemon-credentials = { workspace = true }
daemon-provision = { workspace = true }
daemon-telemetry = { workspace = true }
daemon-orchestration = { workspace = true }
daemon-tool-orchestrate = { workspace = true }
daemon-tool-web = { workspace = true }
daemon-tool-fs = { workspace = true }
daemon-skills = { workspace = true }
daemon-node = { workspace = true }
daemon-acp = { workspace = true }
daemon-delivery = { workspace = true }
daemon-ingest = { workspace = true }
agent-client-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
ciborium = { workspace = true }
serde_json = { workspace = true }
