[package]
name = "daemon-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
daemon-common = { workspace = true, features = ["governor"] }
daemon-protocol = { workspace = true }
daemon-supervision = { workspace = true }
daemon-api = { workspace = true }
daemon-core = { workspace = true }
daemon-store = { workspace = true, features = ["sqlite"] }
daemon-activation = { workspace = true }
daemon-auth = { workspace = true }
daemon-host = { workspace = true }
daemon-credentials = { workspace = true }
daemon-provision = { workspace = true }
daemon-telemetry = { workspace = true }
daemon-orchestration = { workspace = true }
daemon-tool-orchestrate = { workspace = true }
daemon-tool-web = { workspace = true }
daemon-tool-fs = { workspace = true }
daemon-skills = { workspace = true }
daemon-node = { workspace = true }
# The persona (SOUL.md) store backing the wire SoulGet/SoulSet gate + the authored-persona proof.
daemon-prompt = { workspace = true }
# Track D live-agent e2e: the real genai OpenAI adapter (`GenAiProvider::openai`) the
# `assemble_daemon_api_gateway` harness helper points at a mock upstream. Used from `src/` (the
# harness), so it is a normal dependency, not dev-only.
daemon-providers = { workspace = true }
# Projector (mmproj) guard conformance: a real ModelManager over a seeded registry proves the
# ProviderModels exclusion + the ModelActivate rejection end to end.
daemon-models = { workspace = true }
daemon-acp = { workspace = true }
daemon-rooms = { workspace = true }
# N5 demo-transport conformance: the in-process demo adapter + its interactive-auth factories,
# driven over the socket exactly as a GUI/TUI would. Used from `src/`, so a normal dependency.
daemon-demo = { workspace = true }
daemon-matrix = { workspace = true }
daemon-delivery = { workspace = true }
daemon-ingest = { workspace = true }
agent-client-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# N2 transport-configure conformance: the reference FakeProtocol whose `validate_account` rejects
# the marker value, delegated to by the configure-target mock adapter. Test-only.
daemon-api-testkit = { workspace = true }
# Auth 7 e2e/negative suites: drive the real authenticated transports with the same `rsasl`
# SCRAM-SHA-256 client a GUI/TUI uses, over a real `rustls` TLS/TCP connection with throwaway certs.
# Test-only; never compiled into a shipped artifact.
rsasl = { workspace = true }
tokio-rustls = { workspace = true }
# The WebSocket-carrier gate: a real client handshake (subprotocol + Origin headers) against the
# `serve_mux_ws` listener, speaking the pinned one-binary-message-per-frame contract. Test-only.
tokio-tungstenite = { workspace = true }
rcgen = "0.13"
tempfile = "3"
# W10 semantic_search conformance: the workspace embedding index + the tool, driven MockEmbedder-
# backed over a seeded temp workspace. Test-only.
daemon-workspace-index = { workspace = true }
daemon-tool-semantic-search = { workspace = true }
# Track D live-agent e2e: an in-process mock upstream standing in for the daemon-api gateway, so a
# real session turn drives the OpenAI adapter over HTTP without a network. Test-only.
wiremock = { workspace = true }
# Track 5 discovery e2e: the keyless `GET /models` listing the Daemon Cloud discovery hook performs
# against the mock gateway (mirrors the binary's `daemon_cloud_gateway_models`). Test-only.
reqwest = { workspace = true }
# Auth-4 ownership: the HTTP transport's session-log routes must keep working under `[api].local_trust`
# after the None-principal flip (they now dispatch inside a `RequestContext::system()` scope). Test-only.
daemon-http = { workspace = true }
# CON-15 node half: the descriptor-driven OAuth engine, so the conformance suite proves the
# provider-bound family registration + the provider-key slot mapping end to end. Test-only.
daemon-oauth = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
# False positives / deps wired up during active development (macro- or feature-only use that
# cargo-machete cannot see, or in-progress crates). Intentional; do not auto-remove.
ignored = ["daemon-acp"]
