[package]
name = "daemon-swarm-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
# The peer-side round engine + the local-coordinator harness + churn/failure drill machinery
# (feature-gated). Merge 2 swapped the scripted coordinator for the real `daemon-swarm-coordinator`
# tick loop; Wave 3 (R3) adds the drills over the same harness.
daemon-swarm-run = { workspace = true, features = ["harness"] }
daemon-swarm-proto = { workspace = true }
# The payload store + `PayloadStore` trait: the desync drill fetches checkpoint + payload bytes for
# the offline resync (checkpoint + record replay).
daemon-swarm-net = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
