[package]
name = "daemon-tool-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Document auto-extraction on `read` (.ipynb / .docx / .xlsx / .pdf -> text). ON by default; a
# minimal build can drop it to shed the office/PDF parsing tree — reads of those formats then
# fall back to the structured "binary file" refusal.
default = ["extract"]
extract = ["dep:pdf-extract", "dep:zip", "dep:quick-xml"]

[dependencies]
daemon-common = { workspace = true }
daemon-core = { workspace = true }
daemon-protocol = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# search stack for the native grep/glob ops (gitignore-respecting, no rg binary).
ignore = { workspace = true }
globset = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
# similarity ratios for the fuzzy edit strategies + unified diffs in edit results.
similar = { workspace = true }
# document extraction (feature `extract`).
pdf-extract = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }

[dev-dependencies]
tokio-util = { workspace = true }

[lints]
workspace = true
