[package]
name = "daemon-tool-orchestrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-orchestration = { workspace = true }
daemon-common = { workspace = true }
daemon-protocol = { workspace = true }
async-trait = { workspace = true }
# Parse the optional `attachments` arg (paths to hand down) from a JSON tool call.
serde_json = { workspace = true }

[lints]
workspace = true
