[package]
name = "daemon-tool-orchestrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-orchestration = { workspace = true }
daemon-common = { workspace = true }
daemon-protocol = { workspace = true }
# The durable session graph backing the `send` (pending-input + wake) and per-child `status` verbs.
daemon-store = { workspace = true }
async-trait = { workspace = true }
# The serde-derived args (verb-tagged enum + deny_unknown_fields) validated from the tool-call JSON.
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
# The tool tests stub the fleet's placement seam (`ChildSpawner` -> `ManagedUnit`).
daemon-supervision = { workspace = true }

[lints]
workspace = true
