[package]
name = "daemon-tool-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-common = { workspace = true }
daemon-processes = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
daemon-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
