[package]
name = "daemon-tool-profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# The persona (SOUL.md) store: the tool's `persona` argument routes through PersonaStore::set
# (validated, scanned, capped, revision-logged) - the spec field left the wire at v36.
daemon-prompt = { workspace = true }
daemon-core = { workspace = true }
# The shared profile create/validate/persist/version surface; the tool is a thin agent veneer over it
# (the exact validation + store + revision path the operator `profile_create` op uses).
daemon-host = { workspace = true }
daemon-api = { workspace = true }
daemon-common = { workspace = true }
# The `ToolDetail` carried on a `guardrail` decline (the composed-profiles cap), matching the
# structured detail the orchestrate depth/fanout guards emit.
daemon-protocol = { workspace = true }
# The durable session graph backing the shared subtree-authorization check (`owns_subtree`).
daemon-store = { workspace = true }
async-trait = { workspace = true }
# Parse the JSON tool-call args into a ProfileSpec shape.
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# Build a minimal `TurnCx` to drive `Tool::run` (the composed-profiles guardrail path).
tokio-util = { workspace = true }
daemon-protocol = { workspace = true }
# Persona-routing tests run a real PersonaStore over a scratch dir.
tempfile = "3"

[lints]
workspace = true
