[package]
name = "daemon-tool-session-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
async-trait = { workspace = true }
# Parse the JSON tool-call args and build the structured JSON responses.
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
daemon-common = { workspace = true }
daemon-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
