[package]
name = "daemon-tool-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-protocol = { workspace = true }
daemon-common = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
