[package]
name = "daemon-tool-vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daemon-core = { workspace = true }
daemon-protocol = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
daemon-common = { workspace = true }
tokio-util = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
